--- a/game.html
+++ b/game.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Palindrome app</title>
+    <title>Game Page</title>
     <link rel="stylesheet" href="./styles/app.css" />
   </head>
   <body>
     <div class="container">
-        <h1 class="main-title"> Welcome To My Game</h1>
-        <div class="action">
-            <button class="btn">Get Started</button>
+        <div class="input-field">
+            <input type="text" id="user-word" placeholder="Enter word that is a palindrome here..." required>
+            <button type="submit" class="cta" value="Check">Check</button>
         </div>
     </div>
   </body>
