commiting projet files to my main branch

--- a/game.html
+++ b/game.html
@@ -8,10 +8,17 @@
   </head>
   <body>
     <div class="container">
-        <div class="input-field">
-            <input type="text" id="user-word" placeholder="Enter word that is a palindrome here..." required>
-            <button type="submit" class="cta" value="Check">Check</button>
-        </div>
+      <div class="input-field">
+        <input
+          type="text"
+          id="user-word"
+          placeholder="Enter word that is a palindrome here..."
+          required
+        />
+        <button type="submit" class="cta" value="Check">Check</button>
+      </div>
+      <p class="result"></p>
+      <a href="app.html"><button class="button">Go Back</button></a>
     </div>
   </body>
 </html>
