--- a/app.html
+++ b/app.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Palindrome app</title>
     <link rel="stylesheet" href="./styles/app.css" />
   </head>
@@ -10,7 +11,7 @@
     <div class="container">
         <h1 class="main-title"> Welcome To My Game</h1>
         <div class="action">
-            <button class="btn">Get Started</button>
+            <a href="game.html"><button class="btn">Get Started</button></a>
         </div>
     </div>
   </body>
