--- a/app.html
+++ b/app.html
@@ -9,10 +9,26 @@
   </head>
   <body>
     <div class="container">
-        <h1 class="main-title"> Welcome To My Game</h1>
-        <div class="action">
-            <a href="game.html"><button class="btn">Get Started</button></a>
-        </div>
+      <h1 class="main-title">Welcome To My Game</h1>
+      <div class="action">
+        <a href="game.html"
+          ><button class="btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="200"
+              height="200"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="#fff"
+                d="m20 12l.707-.707l.707.707l-.707.707zM5 13a1 1 0 1 1 0-2zm9.707-7.707l6 6l-1.414 1.414l-6-6zm6 7.414l-6 6l-1.414-1.414l6-6zM20 13H5v-2h15z"
+              />
+            </svg>
+            Get Started
+          </button></a
+        >
+      </div>
     </div>
+    <script src="./javascript/app.js"></script>
   </body>
 </html>
