commiting css styling to my html content and javascript on button and timer for functionality

--- a/game.html
+++ b/game.html
@@ -15,12 +15,14 @@
         <input
           type="text"
           id="user-word"
-          placeholder="Enter Palindrome words"
+          placeholder="Enter Palindrome words here"
           required
         />
         <button type="submit" class="cta">Submit</button>
       </div>
-      <form class="result"></form>
+      <form id="palindrome-result" value="result">
+        <ul class="list" type=""></ul>
+      </form>
       <a href="app.html"><button class="button">Back to home</button></a>
     </div>
     <script src="./javascript/app.js"></script>
